--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,6 @@ h1 {
 }
 .flex-item {
     display: flex;
-    justify-content: space-around;
     align-items: center;
     flex-direction:column;
     flex:1;
@@ -44,13 +43,8 @@ img {
 #name {
     margin-bottom: 80px;
 }
-/*issue aligning the buttons so a temp fix of adding margins top and bottom*/
-#item-2 {
-    margin-top: 12px;
-}
-#item-3 {
-    margin-bottom: 110px;
-}
+
+
 
 
 
